--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -1,8 +1,11 @@
 .body {
-  font-family: "Roboto";
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
+  display: flex;
 
-  color: #000000;
+  align-items: flex-start;
+  justify-content: space-between;
+
+  height: 224px;
+
+  padding-top: 56px;
+  padding-bottom: 72px;
 }
