--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 div,
 span,
-applet,
 object,
 iframe,
 h1,
@@ -14,11 +17,8 @@ h6,
 p,
 blockquote,
 pre,
-a,
 abbr,
-acronym,
 address,
-big,
 cite,
 code,
 del,
@@ -28,19 +28,14 @@ img,
 ins,
 kbd,
 q,
-s,
 samp,
 small,
-strike,
 strong,
 sub,
 sup,
-tt,
 var,
 b,
-u,
 i,
-center,
 dl,
 dt,
 dd,
@@ -63,16 +58,13 @@ article,
 aside,
 canvas,
 details,
-embed,
-figure,
 figcaption,
+figure,
 footer,
 header,
 hgroup,
 menu,
 nav,
-output,
-ruby,
 section,
 summary,
 time,
@@ -82,11 +74,15 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
-  font: inherit;
+  outline: 0;
   vertical-align: baseline;
+  background: transparent;
 }
-/* HTML5 display-role reset for older browsers */
+
+body {
+  line-height: 1;
+}
+
 article,
 aside,
 details,
@@ -100,17 +96,17 @@ nav,
 section {
   display: block;
 }
-body {
-  line-height: 1;
-}
-ol,
-ul {
+
+ul,
+li {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -118,7 +114,65 @@ q:after {
   content: "";
   content: none;
 }
+
+a {
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+  background: transparent;
+  color: inherit;
+  text-decoration: none;
+}
+
+/* change colours to suit your needs */
+
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+
+/* change colours to suit your needs */
+
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+/* change border colour to suit your needs */
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+input,
+select {
+  vertical-align: middle;
+}
+
+input:focus,
+select:focus {
+  outline: 0;
 }
