--- a/src/components/SkillList/style.css
+++ b/src/components/SkillList/style.css
@@ -6,7 +6,7 @@
   gap: 8px;
 }
 
-.skillList__add {
+.skillListAdd {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +20,7 @@
   cursor: pointer;
 }
 
-.skillList__add-img {
+.skillListAddImg {
   width: 12px;
   height: 12px;
 }
