--- a/src/components/Experience/style.css
+++ b/src/components/Experience/style.css
@@ -1,8 +1,18 @@
+.experienceSkillList {
+  display: flex;
+}
+
 .experienceSkillListYears {
   width: 40px;
   padding-left: 8px;
 }
 
-.experienceSkillList {
-  display: flex;
+.experienceSkillListName {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+
+  color: #000000;
 }
