--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -11,17 +11,40 @@
 }
 
 .headerAvatar {
+  position: relative;
+
   width: 168px;
   height: 168px;
 
   margin-right: 24px;
+}
 
-  border-radius: 50%;
-  object-fit: cover;
+.headerAvatar:hover .headerAvatarRefresh {
+  display: block;
 }
 
 .headerAvatarInput {
   display: none;
+}
+
+.headerAvatarRefresh {
+  position: absolute;
+  top: 0px;
+  right: 20px;
+
+  display: none;
+
+  width: 32px;
+  height: 32px;
+}
+
+.headerAvatarImage {
+  width: 168px;
+  height: 168px;
+
+  object-fit: cover;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .headerBackground {
