--- a/src/components/Experience/style.css
+++ b/src/components/Experience/style.css
@@ -5,9 +5,13 @@
 .experienceSkillListYears {
   width: 40px;
   padding-left: 8px;
+
+  border-bottom: 1px dashed #3483CC;
 }
 
 .experienceSkillListName {
+  padding-right: 8px;
+
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
