--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,3 +2,16 @@
   display: flex;
   margin-bottom: 56px;
 }
+@media screen and (max-width: 1150px) {
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .commentsTitle {
+    margin: 30px 0;
+  }
+  .maps {
+    margin: 20px 0;
+    max-width: 300px;
+  }
+}
