--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,10 +1,9 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
 
   align-items: flex-start;
   justify-content: space-between;
-
-  height: 224px;
 
   padding-top: 40px;
   padding-bottom: 16px;
@@ -93,6 +92,12 @@
   font-weight: 500;
   font-size: 40px;
   line-height: 48px;
+
+  cursor: pointer;
+}
+
+.headerInfoName:hover {
+  background: rgba(0, 0, 0, 0.06);
 }
 
 .headerInfoLocationWrapper {
@@ -146,4 +151,22 @@
   line-height: 24px;
 
   color: #3483cc;
+}
+
+@media screen and (max-width: 1150px) {
+  .header {
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .headerInfo {
+    align-items: center;
+    text-align: center;
+  }
+  .headerPrint {
+    padding-top: 15px;
+  }
+  .headerBackground {
+    height: 380px;
+  }
 }
